fix scalable on iOS

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -51,7 +51,7 @@
     outline: none;
     appearance: none;
     &:focus {
-      font-size: 1.8rem;
+      font-size: 16px;
       outline: none;
     }
     &::placeholder {
